# langchain-course

./: .env  README.md  document_structured.py  lenght_base.py  pyproject.toml  semantic_meaning.py  text_structured.py
Chains/: conditional_chain.py  parallel_chain.py  sequential_chain.py  simple_chain.py
Parsers/: jsonoutputparser.py  pydanticoutputparser.py  stroutputparser.py  stroutputparser1.py  structuredoutputparser.py
models/1.LLMs/: 1_llm_demo.py
models/2.ChatModels/: 1_chatmodel_openai.py  2_chatmodel_anthropic.py  3_chatmodel_gemini.py  4_chatmodel_hf_api.py  5_chatmodel_hf_local.py
models/3.EmbeddedModels/: 1_embeding_openai_query.py  2_embeding_openai_docs.py  3_embeding_hf_local.py  4_document_similarity.py
ouputs/: json_schema.json  pydantic_demo.py  typeddict_demo.py  with_structured_output_json.py  with_structured_output_llama.py  with_structured_output_pydantic.py  with_structured_output_typeddict.py
prompts/: LanChain_Models.code-workspace  chat_history.txt  chat_prompt_template.py  chatbot.py  message_placeholder.py  messeges.py  prompt_generator.py  prompt_ui.py  template.json
